<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.experience.fragments.ExperienceBookingFragment">

    <!-- Top App Bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="?attr/actionBarTheme"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="?android:attr/homeAsUpIndicator">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/booking"
                android:textSize="@dimen/text_medium" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/bookTicketScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/bookNowButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/selectedExperienceLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/experienceImageViewCard"
                    android:layout_width="@dimen/smaller_image_dimen"
                    android:layout_height="@dimen/smaller_image_dimen"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/experienceImageView"
                        android:layout_width="@dimen/smaller_image_dimen"
                        android:layout_height="@dimen/smaller_image_dimen"
                        android:scaleType="centerCrop"
                        tools:src="@color/brand_color" />

                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/experienceTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:ellipsize="end"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="start"
                    android:maxLines="3"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintLeft_toRightOf="@id/experienceImageViewCard"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Traditional Salt Making, Tenganan Ancient Village and Taman Ujung Water Palace" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/totalPriceTextView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/rubik"
                    android:gravity="start|top"
                    android:textColor="?colorPrimary"
                    android:textSize="@dimen/text_smaller"
                    app:layout_constraintBottom_toBottomOf="@id/experienceImageViewCard"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/experienceImageViewCard"
                    app:layout_constraintTop_toBottomOf="@id/experienceTextView"
                    tools:text="Total Price : 100 $" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Experience Date -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selectDateInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/select_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/selectDateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/rubik"
                    android:gravity="start" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Number of Tickets -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numTicketsInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/number_of_tickets">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numTicketsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:fontFamily="@font/rubik"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Contact Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/contact_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:imeOptions="actionNext"
                    android:maxLength="20"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/contact_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phone Number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/contact_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactPhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:fontFamily="@font/rubik"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Additional Requests -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/additionalRequestsInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/additional_requests">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/additionalRequestsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:gravity="top"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="3" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <!-- Booking Confirmation -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bookNowButton"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_smaller"
        android:text="@string/book_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>